# SocialMediaApp

./: CMakeLists.txt  README.md  activity.cpp  activity.h  comment.cpp  comment.h  date.cpp  date.h  goongram.cpp  goongram.h  goongram.ui  main.cpp  memory.cpp  memory.h  page.cpp  page.h  post.cpp  post.h  resources.qrc  user.cpp  user.h
